--- a/Codigo/demostracionFuncionamientoDistancias.ipynb
+++ b/Codigo/demostracionFuncionamientoDistancias.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:21<00:00, 16.51it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [00:18<00:00, 18.66it/s]\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "0     6419.344987  270.657874  426.496152  262.281385  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,6 +277,79 @@
     "results_df = pd.DataFrame(results_dict)\n",
     "\n",
     "results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>BSA</th>\n",
+       "      <th>Dmax_patient</th>\n",
+       "      <th>Dmax_bulk</th>\n",
+       "      <th>Spread_bulk</th>\n",
+       "      <th>Spread_patient</th>\n",
+       "      <th>SDmax_euc</th>\n",
+       "      <th>SDmax_man</th>\n",
+       "      <th>SDmax_che</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>169.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>1.838478</td>\n",
+       "      <td>497.598447</td>\n",
+       "      <td>446.133303</td>\n",
+       "      <td>4408.794608</td>\n",
+       "      <td>6419.344987</td>\n",
+       "      <td>270.657874</td>\n",
+       "      <td>426.496152</td>\n",
+       "      <td>262.281385</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Height  Weight       BSA  Dmax_patient   Dmax_bulk  Spread_bulk   \n",
+       "0   169.0    72.0  1.838478    497.598447  446.133303  4408.794608  \\\n",
+       "\n",
+       "   Spread_patient   SDmax_euc   SDmax_man   SDmax_che  \n",
+       "0     6419.344987  270.657874  426.496152  262.281385  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paciente29.calcularParametrosDistancia()"
    ]
   }
  ],
