--- a/Codigo/DistanciasDemostracionFuncionamiento.ipynb
+++ b/Codigo/DistanciasDemostracionFuncionamiento.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:18<00:00, 18.66it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [00:25<00:00, 13.74it/s]\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -200,27 +200,27 @@
        "      <td>169.0</td>\n",
        "      <td>72.0</td>\n",
        "      <td>1.838478</td>\n",
-       "      <td>497.598447</td>\n",
-       "      <td>446.133303</td>\n",
-       "      <td>4408.794608</td>\n",
-       "      <td>6419.344987</td>\n",
-       "      <td>270.657874</td>\n",
-       "      <td>426.496152</td>\n",
-       "      <td>262.281385</td>\n",
+       "      <td>49.759845</td>\n",
+       "      <td>44.61333</td>\n",
+       "      <td>440.879461</td>\n",
+       "      <td>641.934499</td>\n",
+       "      <td>27.065787</td>\n",
+       "      <td>42.649615</td>\n",
+       "      <td>26.228138</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient   Dmax_bulk  Spread_bulk   \n",
-       "0   169.0    72.0  1.838478    497.598447  446.133303  4408.794608  \\\n",
+       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
+       "0   169.0    72.0  1.838478     49.759845   44.61333   440.879461  \\\n",
        "\n",
-       "   Spread_patient   SDmax_euc   SDmax_man   SDmax_che  \n",
-       "0     6419.344987  270.657874  426.496152  262.281385  "
+       "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
+       "0      641.934499  27.065787  42.649615  26.228138  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,12 +276,13 @@
     "# Convertir el diccionario en un DataFrame\n",
     "results_df = pd.DataFrame(results_dict)\n",
     "\n",
+    "# Distancias en milimetros\n",
     "results_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -323,27 +324,27 @@
        "      <td>169.0</td>\n",
        "      <td>72.0</td>\n",
        "      <td>1.838478</td>\n",
-       "      <td>497.598447</td>\n",
-       "      <td>446.133303</td>\n",
-       "      <td>4408.794608</td>\n",
-       "      <td>6419.344987</td>\n",
-       "      <td>270.657874</td>\n",
-       "      <td>426.496152</td>\n",
-       "      <td>262.281385</td>\n",
+       "      <td>49.759845</td>\n",
+       "      <td>44.61333</td>\n",
+       "      <td>440.879461</td>\n",
+       "      <td>641.934499</td>\n",
+       "      <td>2.706579</td>\n",
+       "      <td>42.649615</td>\n",
+       "      <td>26.228138</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient   Dmax_bulk  Spread_bulk   \n",
-       "0   169.0    72.0  1.838478    497.598447  446.133303  4408.794608  \\\n",
+       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
+       "0   169.0    72.0  1.838478     49.759845   44.61333   440.879461  \\\n",
        "\n",
-       "   Spread_patient   SDmax_euc   SDmax_man   SDmax_che  \n",
-       "0     6419.344987  270.657874  426.496152  262.281385  "
+       "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
+       "0      641.934499   2.706579  42.649615  26.228138  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
