Pasados RTSTRUCT a .txt

--- a/Codigo/DistanciasDemostracionFuncionamiento.ipynb
+++ b/Codigo/DistanciasDemostracionFuncionamiento.ipynb
@@ -36,7 +36,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:25<00:00, 13.74it/s]\n"
+      "Construyendo Mascaras:   9%|▉         | 32/348 [00:02<00:09, 33.11it/s]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Se instancia la clase para el paciente numero 29\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m paciente29 \u001b[39m=\u001b[39m Paciente(\u001b[39m29\u001b[39;49m, \u001b[39m3\u001b[39;49m)\n",
+      "File \u001b[1;32md:\\Codigo\\Git_TFG_Alex\\Codigo\\Paciente.py:34\u001b[0m, in \u001b[0;36mPaciente.__init__\u001b[1;34m(self, paciente, ROI_con_mayor_suvmax, dirBaseDatos)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mROI_con_mayor_suvmax \u001b[39m=\u001b[39m ROI_con_mayor_suvmax\n\u001b[0;32m     33\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdicom_roi_map \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobtener_mapa_dicom_ROI()\n\u001b[1;32m---> 34\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmascaraGeneral \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mobtenerMascarasPaciente()\n\u001b[0;32m     35\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlabeled_data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_features \u001b[39m=\u001b[39m label(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmascaraGeneral)\n\u001b[0;32m     36\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39meuc_dist_ctr, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mman_dist_ctr, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mche_dist_ctr, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex_i_ctr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdistances(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcalcularCentroides(), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mspacing)\n",
+      "File \u001b[1;32md:\\Codigo\\Git_TFG_Alex\\Codigo\\Paciente.py:284\u001b[0m, in \u001b[0;36mPaciente.obtenerMascarasPaciente\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    282\u001b[0m     mascaras\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_obtenerMascaraOptimizadoParaConstructor(p))\n\u001b[0;32m    283\u001b[0m     progress_bar\u001b[39m.\u001b[39mupdate(\u001b[39m1\u001b[39m)\n\u001b[1;32m--> 284\u001b[0m     time\u001b[39m.\u001b[39msleep(\u001b[39m0.001\u001b[39m)  \u001b[39m# Simulación de un tiempo de procesamiento\u001b[39;00m\n\u001b[0;32m    286\u001b[0m progress_bar\u001b[39m.\u001b[39mclose()\n\u001b[0;32m    288\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m (\u001b[39mlen\u001b[39m(mascaras)):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Construyendo Mascaras:  10%|█         | 35/348 [00:20<00:09, 33.11it/s]"
      ]
     }
    ],
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,17 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of lesions detected: 19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spacing = paciente29.spacing\n",
     "data = np.array(paciente29.mascaraGeneral)\n",
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,73 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Height</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>BSA</th>\n",
-       "      <th>Dmax_patient</th>\n",
-       "      <th>Dmax_bulk</th>\n",
-       "      <th>Spread_bulk</th>\n",
-       "      <th>Spread_patient</th>\n",
-       "      <th>SDmax_euc</th>\n",
-       "      <th>SDmax_man</th>\n",
-       "      <th>SDmax_che</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>169.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>1.838478</td>\n",
-       "      <td>49.759845</td>\n",
-       "      <td>44.61333</td>\n",
-       "      <td>440.879461</td>\n",
-       "      <td>641.934499</td>\n",
-       "      <td>27.065787</td>\n",
-       "      <td>42.649615</td>\n",
-       "      <td>26.228138</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   169.0    72.0  1.838478     49.759845   44.61333   440.879461  \\\n",
-       "\n",
-       "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0      641.934499  27.065787  42.649615  26.228138  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%% Calculate parameters\n",
     "\n",
