--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -15,12 +15,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import shutil\n",
+    "import re\n",
+    "import numpy as np\n",
+    "import pydicom"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "16 20 23 24 25 28 34 36 38 42 44 46 47 48 49 50 52 53 55 56 59 61 62 63 65 66 67 69 72 73 74 75 79 80 82 83 84 85 88"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funcionando <br>\n",
+    "16  20  23  24  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "25 tiene ficheros dañados <br> \n",
+    "Damaged files\n",
+    "\n",
+    "CT Error: \n",
+    "['DICOM_135.dcm', 'DICOM_136.dcm', 'DICOM_137.dcm', 'DICOM_138.dcm', 'DICOM_139.dcm', 'DICOM_140.dcm', 'DICOM_141.dcm', 'DICOM_142.dcm', 'DICOM_143.dcm', 'DICOM_144.dcm', 'DICOM_145.dcm', 'DICOM_146.dcm', 'DICOM_147.dcm', 'DICOM_148.dcm', 'DICOM_149.dcm', 'DICOM_150.dcm', 'DICOM_151.dcm', 'DICOM_152.dcm', 'DICOM_153.dcm', 'DICOM_154.dcm', 'DICOM_155.dcm', 'DICOM_156.dcm', 'DICOM_157.dcm', 'DICOM_158.dcm', 'DICOM_159.dcm']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "28 No funcionan las distacias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,23 +72,89 @@
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'F:TFG_AlejandraMedinaBenito\\\\CosasUtiles\\\\BasedeDatos\\\\29\\\\RTSTRUCT.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m bdd \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39m\"\u001b[39m\u001b[39mF:\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mTFG_AlejandraMedinaBenito\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mCosasUtiles\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mBasedeDatos\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m p \u001b[39m=\u001b[39m Paciente(\u001b[39m29\u001b[39;49m,\u001b[39m3\u001b[39;49m,bdd)\n",
-      "File \u001b[1;32md:\\Codigo\\Git_TFG_Alex\\Codigo\\Paciente.py:31\u001b[0m, in \u001b[0;36mPaciente.__init__\u001b[1;34m(self, paciente, ROI_con_mayor_suvmax, dirBaseDatos)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrois \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobtener_ROI_RTSTRUCT()\n\u001b[0;32m     30\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnombres_ROI \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobtenerNombresROI()\n\u001b[1;32m---> 31\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mUI_Contornos \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mobtenerUI_Contornos()\n\u001b[0;32m     32\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mROI_con_mayor_suvmax \u001b[39m=\u001b[39m ROI_con_mayor_suvmax\n\u001b[0;32m     33\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdicom_roi_map \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobtener_mapa_dicom_ROI()\n",
-      "File \u001b[1;32md:\\Codigo\\Git_TFG_Alex\\Codigo\\Paciente.py:525\u001b[0m, in \u001b[0;36mPaciente.obtenerUI_Contornos\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    523\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mobtenerUI_Contornos\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m    524\u001b[0m     UI_Contornos \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_importarContornosRTSTRUCT()\n\u001b[1;32m--> 525\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_procesar_RTSTRUCT_como_txt()\n\u001b[0;32m    527\u001b[0m     \u001b[39mfor\u001b[39;00m clave_externa \u001b[39min\u001b[39;00m UI_Contornos:\n\u001b[0;32m    528\u001b[0m         \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdireccionBaseDatos, \u001b[39mstr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpaciente), \u001b[39m\"\u001b[39m\u001b[39mROI_txt\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfROI_\u001b[39m\u001b[39m{\u001b[39;00mclave_externa\u001b[39m}\u001b[39;00m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m), \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m archivo:\n",
-      "File \u001b[1;32md:\\Codigo\\Git_TFG_Alex\\Codigo\\Paciente.py:413\u001b[0m, in \u001b[0;36mPaciente._procesar_RTSTRUCT_como_txt\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    411\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_procesar_RTSTRUCT_como_txt\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m    412\u001b[0m     \u001b[39m# Abrir archivo y leer su contenido\u001b[39;00m\n\u001b[1;32m--> 413\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdireccionBaseDatos, \u001b[39mstr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpaciente), \u001b[39m\"\u001b[39m\u001b[39mRTSTRUCT.txt\u001b[39m\u001b[39m\"\u001b[39m), encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m archivo:\n\u001b[0;32m    414\u001b[0m         texto \u001b[39m=\u001b[39m archivo\u001b[39m.\u001b[39mread()\n\u001b[0;32m    416\u001b[0m     \u001b[39m# Eliminar caracteres raros\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'F:TFG_AlejandraMedinaBenito\\\\CosasUtiles\\\\BasedeDatos\\\\29\\\\RTSTRUCT.txt'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Construyendo Mascaras: 100%|██████████| 301/301 [00:06<00:00, 46.48it/s]\n"
      ]
     }
    ],
    "source": [
-    "bdd = os.path.join(\"F:\", \"TFG_AlejandraMedinaBenito\", \"CosasUtiles\", \"BasedeDatos\")\n",
-    "p = Paciente(29,3,bdd)"
+    "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
+    "p = Paciente(24,1,bdd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>BSA</th>\n",
+       "      <th>Dmax_patient</th>\n",
+       "      <th>Dmax_bulk</th>\n",
+       "      <th>Spread_bulk</th>\n",
+       "      <th>Spread_patient</th>\n",
+       "      <th>SDmax_euc</th>\n",
+       "      <th>SDmax_man</th>\n",
+       "      <th>SDmax_che</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>146.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>1.878386</td>\n",
+       "      <td>156.938102</td>\n",
+       "      <td>92.169631</td>\n",
+       "      <td>3341.395105</td>\n",
+       "      <td>5299.048296</td>\n",
+       "      <td>83.549449</td>\n",
+       "      <td>113.706448</td>\n",
+       "      <td>72.914549</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
+       "0   146.0    87.0  1.878386    156.938102  92.169631  3341.395105  \\\n",
+       "\n",
+       "   Spread_patient  SDmax_euc   SDmax_man  SDmax_che  \n",
+       "0     5299.048296  83.549449  113.706448  72.914549  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.calcularParametrosDistancia()"
    ]
   }
  ],
