--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "Funcionando <br>\n",
-    "16  20  23  24  "
+    "16  20  23  24  36  "
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "28 No funcionan las distacias"
+    "28 34 No funcionan las distacias"
    ]
   },
   {
@@ -75,13 +75,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 301/301 [00:06<00:00, 46.48it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 395/395 [00:17<00:00, 22.29it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(24,1,bdd)"
+    "p = Paciente(36,1,bdd)"
    ]
   },
   {
@@ -125,16 +125,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>146.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>1.878386</td>\n",
-       "      <td>156.938102</td>\n",
-       "      <td>92.169631</td>\n",
-       "      <td>3341.395105</td>\n",
-       "      <td>5299.048296</td>\n",
-       "      <td>83.549449</td>\n",
-       "      <td>113.706448</td>\n",
-       "      <td>72.914549</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>71.5</td>\n",
+       "      <td>1.543805</td>\n",
+       "      <td>89.251517</td>\n",
+       "      <td>85.426532</td>\n",
+       "      <td>1636.799802</td>\n",
+       "      <td>1636.799802</td>\n",
+       "      <td>57.812695</td>\n",
+       "      <td>74.68992</td>\n",
+       "      <td>55.9623</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -142,10 +142,10 @@
       ],
       "text/plain": [
        "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   146.0    87.0  1.878386    156.938102  92.169631  3341.395105  \\\n",
+       "0   120.0    71.5  1.543805     89.251517  85.426532  1636.799802  \\\n",
        "\n",
-       "   Spread_patient  SDmax_euc   SDmax_man  SDmax_che  \n",
-       "0     5299.048296  83.549449  113.706448  72.914549  "
+       "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
+       "0     1636.799802  57.812695   74.68992    55.9623  "
       ]
      },
      "execution_count": 4,
