--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "Funcionando <br>\n",
-    "16  20  23  24  36  "
+    "16  20  23  24  36  44"
    ]
   },
   {
@@ -44,7 +44,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "25 tiene ficheros dañados <br> \n",
+    "Ficheros dañados <br> \n",
+    "25 <br>\n",
     "Damaged files\n",
     "\n",
     "CT Error: \n",
@@ -56,12 +57,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "28 34 No funcionan las distacias"
+    "No funcionan las distacias <br>\n",
+    "28 34"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No tiene RTSTRUCT <br>\n",
+    "38 42"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -75,18 +86,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 395/395 [00:17<00:00, 22.29it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 395/395 [00:07<00:00, 51.79it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(36,1,bdd)"
+    "p = Paciente(44,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -125,16 +136,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>120.0</td>\n",
-       "      <td>71.5</td>\n",
-       "      <td>1.543805</td>\n",
-       "      <td>89.251517</td>\n",
-       "      <td>85.426532</td>\n",
-       "      <td>1636.799802</td>\n",
-       "      <td>1636.799802</td>\n",
-       "      <td>57.812695</td>\n",
-       "      <td>74.68992</td>\n",
-       "      <td>55.9623</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>2.247838</td>\n",
+       "      <td>66.094882</td>\n",
+       "      <td>51.677927</td>\n",
+       "      <td>133.551942</td>\n",
+       "      <td>182.001021</td>\n",
+       "      <td>29.403751</td>\n",
+       "      <td>48.625382</td>\n",
+       "      <td>23.311371</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -142,13 +153,13 @@
       ],
       "text/plain": [
        "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   120.0    71.5  1.543805     89.251517  85.426532  1636.799802  \\\n",
+       "0   214.0    85.0  2.247838     66.094882  51.677927   133.551942  \\\n",
        "\n",
        "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0     1636.799802  57.812695   74.68992    55.9623  "
+       "0      182.001021  29.403751  48.625382  23.311371  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
