--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -15,64 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import shutil\n",
-    "import re\n",
-    "import numpy as np\n",
-    "import pydicom"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "16 20 23 24 25 28 34 36 38 42 44 46 47 48 49 50 52 53 55 56 59 61 62 63 65 66 67 69 72 73 74 75 79 80 82 83 84 85 88"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Funcionando <br>\n",
-    "16  20  23  24  36  44  46"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ficheros dañados <br> \n",
-    "25 <br>\n",
-    "Damaged files\n",
-    "\n",
-    "CT Error: \n",
-    "['DICOM_135.dcm', 'DICOM_136.dcm', 'DICOM_137.dcm', 'DICOM_138.dcm', 'DICOM_139.dcm', 'DICOM_140.dcm', 'DICOM_141.dcm', 'DICOM_142.dcm', 'DICOM_143.dcm', 'DICOM_144.dcm', 'DICOM_145.dcm', 'DICOM_146.dcm', 'DICOM_147.dcm', 'DICOM_148.dcm', 'DICOM_149.dcm', 'DICOM_150.dcm', 'DICOM_151.dcm', 'DICOM_152.dcm', 'DICOM_153.dcm', 'DICOM_154.dcm', 'DICOM_155.dcm', 'DICOM_156.dcm', 'DICOM_157.dcm', 'DICOM_158.dcm', 'DICOM_159.dcm']"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "No funcionan las distacias <br>\n",
-    "28 34"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "No tiene RTSTRUCT <br>\n",
-    "38 42"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -86,18 +34,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:09<00:00, 37.39it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 301/301 [00:14<00:00, 20.38it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(46,1,bdd)"
+    "p = Paciente(52,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -136,36 +84,126 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>150.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>1.825742</td>\n",
-       "      <td>14.058629</td>\n",
-       "      <td>12.587601</td>\n",
-       "      <td>26.158952</td>\n",
-       "      <td>39.360443</td>\n",
-       "      <td>7.700228</td>\n",
-       "      <td>11.176678</td>\n",
-       "      <td>7.506756</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>64.5</td>\n",
+       "      <td>1.745232</td>\n",
+       "      <td>174.082647</td>\n",
+       "      <td>103.635124</td>\n",
+       "      <td>6238.01897</td>\n",
+       "      <td>11432.781079</td>\n",
+       "      <td>99.747591</td>\n",
+       "      <td>134.40532</td>\n",
+       "      <td>94.460602</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   150.0    80.0  1.825742     14.058629  12.587601    26.158952  \\\n",
+       "   Height  Weight       BSA  Dmax_patient   Dmax_bulk  Spread_bulk   \n",
+       "0   170.0    64.5  1.745232    174.082647  103.635124   6238.01897  \\\n",
        "\n",
        "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0       39.360443   7.700228  11.176678   7.506756  "
+       "0    11432.781079  99.747591  134.40532  94.460602  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p.calcularParametrosDistancia()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "16 20 23 24 25 28 34 36 38 42 44 46 47 48 49 50 52 53 55 56 59 61 62 63 65 66 67 69 72 73 74 75 79 80 82 83 84 85 88"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funcionando"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "16  20  23  24  36  44  46  52"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## No Funcionando"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ficheros dañados"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "25 <br>\n",
+    "Damaged files\n",
+    "\n",
+    "CT Error: \n",
+    "['DICOM_135.dcm', 'DICOM_136.dcm', 'DICOM_137.dcm', 'DICOM_138.dcm', 'DICOM_139.dcm', 'DICOM_140.dcm', 'DICOM_141.dcm', 'DICOM_142.dcm', 'DICOM_143.dcm', 'DICOM_144.dcm', 'DICOM_145.dcm', 'DICOM_146.dcm', 'DICOM_147.dcm', 'DICOM_148.dcm', 'DICOM_149.dcm', 'DICOM_150.dcm', 'DICOM_151.dcm', 'DICOM_152.dcm', 'DICOM_153.dcm', 'DICOM_154.dcm', 'DICOM_155.dcm', 'DICOM_156.dcm', 'DICOM_157.dcm', 'DICOM_158.dcm', 'DICOM_159.dcm']\n",
+    "\n",
+    "48 <br>\n",
+    "Damaged files\n",
+    "\n",
+    "CT Error: \n",
+    "['DICOM_092.dcm', 'DICOM_093.dcm', 'DICOM_094.dcm', 'DICOM_095.dcm', 'DICOM_096.dcm', 'DICOM_097.dcm', 'DICOM_098.dcm', 'DICOM_099.dcm', 'DICOM_100.dcm', 'DICOM_101.dcm', 'DICOM_102.dcm', 'DICOM_137.dcm', 'DICOM_138.dcm', 'DICOM_139.dcm', 'DICOM_140.dcm', 'DICOM_141.dcm', 'DICOM_142.dcm', 'DICOM_143.dcm', 'DICOM_144.dcm', 'DICOM_145.dcm', 'DICOM_146.dcm']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No funcionan las distacias"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "28 34 47 49"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No tiene RTSTRUCT"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "38 42"
    ]
   }
  ],
