--- a/Codigo/obtenerDatosPacientes.ipynb
+++ b/Codigo/obtenerDatosPacientes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,18 +34,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:11<00:00, 30.10it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [00:31<00:00, 11.03it/s]\n"
      ]
     }
    ],
    "source": [
     "bdd = os.path.join(\"G:\", \"Base_de_Datos\")\n",
-    "p = Paciente(59,1,bdd)"
+    "p = Paciente(62,1,bdd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,30 +84,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>150.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>1.338532</td>\n",
-       "      <td>62.358602</td>\n",
-       "      <td>45.606331</td>\n",
-       "      <td>287.400269</td>\n",
-       "      <td>690.674753</td>\n",
-       "      <td>46.587324</td>\n",
-       "      <td>78.530275</td>\n",
-       "      <td>36.833078</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>2.025737</td>\n",
+       "      <td>121.806801</td>\n",
+       "      <td>121.806801</td>\n",
+       "      <td>2594.032344</td>\n",
+       "      <td>2862.370176</td>\n",
+       "      <td>60.129617</td>\n",
+       "      <td>91.817761</td>\n",
+       "      <td>55.388931</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Height  Weight       BSA  Dmax_patient  Dmax_bulk  Spread_bulk   \n",
-       "0   150.0    43.0  1.338532     62.358602  45.606331   287.400269  \\\n",
+       "   Height  Weight       BSA  Dmax_patient   Dmax_bulk  Spread_bulk   \n",
+       "0   187.0    79.0  2.025737    121.806801  121.806801  2594.032344  \\\n",
        "\n",
        "   Spread_patient  SDmax_euc  SDmax_man  SDmax_che  \n",
-       "0      690.674753  46.587324  78.530275  36.833078  "
+       "0     2862.370176  60.129617  91.817761  55.388931  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16  20  23  24  36  44  46  52  55  56  59  "
+    "16  20  23  24  36  44  46  52  55  56  59  62  "
    ]
   },
   {
@@ -171,7 +171,9 @@
     "Damaged files\n",
     "\n",
     "CT Error: \n",
-    "['DICOM_092.dcm', 'DICOM_093.dcm', 'DICOM_094.dcm', 'DICOM_095.dcm', 'DICOM_096.dcm', 'DICOM_097.dcm', 'DICOM_098.dcm', 'DICOM_099.dcm', 'DICOM_100.dcm', 'DICOM_101.dcm', 'DICOM_102.dcm', 'DICOM_137.dcm', 'DICOM_138.dcm', 'DICOM_139.dcm', 'DICOM_140.dcm', 'DICOM_141.dcm', 'DICOM_142.dcm', 'DICOM_143.dcm', 'DICOM_144.dcm', 'DICOM_145.dcm', 'DICOM_146.dcm']"
+    "['DICOM_092.dcm', 'DICOM_093.dcm', 'DICOM_094.dcm', 'DICOM_095.dcm', 'DICOM_096.dcm', 'DICOM_097.dcm', 'DICOM_098.dcm', 'DICOM_099.dcm', 'DICOM_100.dcm', 'DICOM_101.dcm', 'DICOM_102.dcm', 'DICOM_137.dcm', 'DICOM_138.dcm', 'DICOM_139.dcm', 'DICOM_140.dcm', 'DICOM_141.dcm', 'DICOM_142.dcm', 'DICOM_143.dcm', 'DICOM_144.dcm', 'DICOM_145.dcm', 'DICOM_146.dcm']\n",
+    "\n",
+    "61"
    ]
   },
   {
